# adage

./: CMakeLists.txt  adage.style
data/: map.map
doc/: adage.html  adage.sxw  classes.html  classes.sxw
src/: CMakeLists.txt  Game.cpp  Game.h  GameUI.cpp  GameUI.h  Makefile  Pointer.h  TODO  adage.pro  adage.style  building.txt  button.cpp  button.h  font.h  gameui.cpp  gameui.h  handle.h  handle_test.cpp  image.h  input.cpp  input.h  main.cpp  manager.cpp  manager.h  map.map  preview.cpp  rgbamask.h  richtext.cpp  richtext.h  smartptr.cpp  smartptr.h  text.cpp  text.h  widget.cpp  widget.h
src/actors/: Actor.cpp  Actor.h  Ghost.cpp  Ghost.h  GhostBuster.cpp  GhostBuster.h  Navigator.cpp  Navigator.h  Person.cpp  Person.h
src/actors/steering/: Alignment.cpp  Alignment.h  Arrive.cpp  Arrive.h  AvoidWalls.cpp  AvoidWalls.h  Cohesion.cpp  Cohesion.h  Evade.cpp  Evade.h  Flee.cpp  Flee.h  Pursue.cpp  Pursue.h  Seek.cpp  Seek.h  Separation.cpp  Separation.h  SteeringBehavior.h  Wander.cpp  Wander.h
src/adage/: BlueprintWindow.cpp  BlueprintWindow.h  CMakeLists.txt  CommWindow.cpp  Game.cpp  Game.h  GameBlueprint.cpp  GameBlueprint.h  GameUI.cpp  GameUI.h  ShellWindow.cpp  main.cpp
src/boost/: shared_ptr.hpp
src/detail/: StaticCastIterator.h
src/editor/: CMakeLists.txt  EditorBlueprint.cpp  EditorBlueprint.h  EditorGame.cpp  EditorGame.h  EditorUI.cpp  EditorUI.h  editor.ui  main.cpp
src/io/: CMakeLists.txt  Makefile  gameconfig.cpp  gameconfig.h
src/map/: Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  MapHandler.cpp  MapHandler.h
src/math/: Point.h  Polygon.cpp  Polygon.h  Segment.cpp  Segment.h  Vector.h  const.h  convert.h  rand.h  real.h  segment.h  vector.h
src/misc/: CMakeLists.txt  rgbamask.h
src/nav/: AStar.cpp  AStar.h  NavGen.cpp  NavGen.h  NavNode.cpp  NavNode.h  NavPath.h  NavSystem.cpp  NavSystem.h
src/ui/: Blueprint.cpp  Blueprint.h  BlueprintWindow.cpp  BlueprintWindow.h  CommWindow.cpp  CommWindow.h  ShellInterface.cpp  ShellInterface.h  ShellWindow.cpp  ShellWindow.h  blueprint.cpp  blueprint.h  blueprintwindow.h  shellwindow.cpp
src/util/: CMakeLists.txt  Makefile  font.cpp  font.h  image.h  smartptr.cpp  smartptr.h
src/utils/: font.h  smartptr.h
src/widget/: CMakeLists.txt  Makefile  button.cpp  button.h  input.cpp  input.h  preview.cpp  richtext.cpp  richtext.h  text.cpp  text.h  widget.cpp  widget.h  widgetbase.cpp  widgetbase.h
src/window/: CMakeLists.txt  Makefile  window.cpp  window.h  windowmanager.cpp  windowmanager.h
src/world/: Building.cpp  Building.h  CellSpacePartition.cpp  CellSpacePartition.h  Entities.h  Entity.cpp  Entity.h  EntityFactory.h  EntityList.h  FactoryManager.cpp  FactoryManager.h  GameBase.cpp  GameBase.h  GhostBustersHQ.cpp  GhostBustersHQ.h  GhostPortal.cpp  GhostPortal.h  GhostTrap.cpp  GhostTrap.h  Map.cpp  Map.h  MovingEntity.cpp  MovingEntity.h  View.cpp  View.h  Wall.cpp  Wall.h  World.cpp  World.h  map.h
src/world/trigger/: LimitedLifetimeTrigger.h  Trigger.h  TriggerRegion.h
